feat: add lodging proto files
